endpoints (KURisk and EmployeeRisk)
